# NeuroSynt

./: README.md  setup.cfg  simple_arbiter2.json  simple_arbiter2.tlsf
configs/: bosy_docker.yaml  bosy_local.yaml  bosy_standalone.yaml  small_docker.yaml  small_local.yaml  small_standalone.yaml  strix_docker.yaml  strix_local.yaml  strix_standalone.yaml
neurosynt/: __init__.py  argument_parser.py  main.py  neurosynt_eval_dataset.py  neurosynt_tool.py
notebooks/: compare.ipynb  eval_new.ipynb  generalization_large.ipynb  generalization_syntcomp.ipynb  results_table.ipynb
