[metadata]
name = neurosynt
version = attr: neurosynt.__version__
description = A Neuro-symbolic Portfolio Solver for Reactive Synthesis
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    machine learning
    deep learning
    logics
    neural-symbolic
    reactive synthesis
license = MIT License
license_files =
    LICENSE
url = https://github.com/reactive-systems/neurosynt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT Licensex§
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    ml2[full]==0.2.0
    plotly
python_requires = >=3.8

[options.extras_require]
dev =
    black
    flake8
    flake8-quotes
    mypy
    pre-commit
    rstcheck
    sphinx==4.0.2
    isort
    pytest
package =
    setuptools>=46.4
    wheel
    build
    twine

[flake8]
exclude =
    .git,
    __pycache__,
    dist,
    *pb2.py,
    *pb2_grpc.py
ignore =
    # whitespace before ':'
    E203,
    # line too long
    E501,
    # ambiguous variable name
    E741,
    # line break before binary operator
    W503
max-line-length = 99
per-file-ignores =
    # imported but unused
    __init__.py: F401
inline-quotes = double
